--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -20,7 +20,7 @@
             <nz-tabset style="width: 360px" [nzTabBarExtraContent]="actions">
               <ng-template #actions>
                 <nz-space>
-                  <button *nzSpaceItem routerLink="/center/logs" nz-button nzType="text" nz-tooltip="个人中心">
+                  <button *nzSpaceItem [routerLink]="['center']" nz-button nzType="text" nz-tooltip="个人中心">
                     <i nz-icon nzType="user"></i>
                   </button>
                   <button *nzSpaceItem nz-button nzType="text" nz-tooltip="退出" (click)="logout()">
