--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,12 +4,12 @@
   <nz-layout class="section-layout">
     <nz-sider nzTheme="light" [nzWidth]="240">
       <ng-scrollbar visibility="hover">
-        <bit-sider-menu></bit-sider-menu>
+        <!--        <bit-sider-menu></bit-sider-menu>-->
       </ng-scrollbar>
     </nz-sider>
     <nz-layout>
       <ng-scrollbar>
-        <bit-page-header></bit-page-header>
+        <!--        <bit-page-header></bit-page-header>-->
         <nz-content>
           <router-outlet (activate)="router.activated()"></router-outlet>
         </nz-content>
