--- a/projects/ngx-bit/router/bit-sider-menu/bit-sider-menu.component.html
+++ b/projects/ngx-bit/router/bit-sider-menu/bit-sider-menu.component.html
@@ -1,24 +1,22 @@
 <ul nz-menu nzMode="inline">
-  <ng-container
-    *ngTemplateOutlet="navTemplate; context: { $implicit: (router.resources | async)?.routers }"
-  ></ng-container>
-  <ng-template #navTemplate let-routers>
-    <ng-container *ngFor="let x of routers | Sort: 'sort'">
-      <ng-container *ngIf="x.nav">
-        <ng-container *ngIf="x.router; else not">
-          <li nz-menu-item nzMatchRouter [nzPaddingLeft]="x.level * 16" [routerLink]="x.fragments">
-            <i *ngIf="!!x.icon" nz-icon [nzType]="x.icon"></i>
-            <span>{{ x.name }}</span>
+  <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: (router.pages | async)?.nodes }"></ng-container>
+  <ng-template #navTemplate let-nodes>
+    <ng-container *ngFor="let node of nodes | Sort: 'sort'">
+      <ng-container *ngIf="node.nav">
+        <ng-container *ngIf="!(node.router | Empty); else not">
+          <li nz-menu-item nzMatchRouter [nzPaddingLeft]="node.level * 16" [routerLink]="node.fragments">
+            <i *ngIf="!!node.icon" nz-icon [nzType]="node.icon"></i>
+            <span>{{ node.name }}</span>
           </li>
         </ng-container>
         <ng-template #not>
-          <li nz-submenu [nzOpen]="x.fragments | AutoOpen: router.fragments" [nzPaddingLeft]="x.level * 16">
+          <li nz-submenu [nzOpen]="node.fragments" [nzPaddingLeft]="node.level * 16">
             <span title>
-              <i *ngIf="!!x.icon" nz-icon [nzType]="x.icon"></i>
-              <span>{{ x.name }}</span>
+              <i *ngIf="!!node.icon" nz-icon [nzType]="node.icon"></i>
+              <span>{{ node.name }}</span>
             </span>
             <ul>
-              <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: x.children }"></ng-container>
+              <ng-container *ngTemplateOutlet="navTemplate; context: { $implicit: node.children }"></ng-container>
             </ul>
           </li>
         </ng-template>
