--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -4,7 +4,7 @@
   <nz-layout class="section-layout">
     <nz-sider nzTheme="light" [nzWidth]="240">
       <ng-scrollbar visibility="hover">
-        <!--        <bit-sider-menu></bit-sider-menu>-->
+        <bit-sider-menu></bit-sider-menu>
       </ng-scrollbar>
     </nz-sider>
     <nz-layout>
